# pikchr-rs

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  TZ_pikchr_rust_port.md  UNSUPPORTED.md  build.rs
examples/: renderone.rs
src/: error.rs  grammar.lalrpop  keywords.rs  lexer.rs  lib.rs  obj.rs  pik.rs  token.rs  value.rs
tests/: p0_pipeline.rs  p1_lexer.rs  p4_diff.rs  p6_text.rs  p8_fuzz.rs  p8_official.rs
tests/corpus/: 01.geom  01.pikchr  02.geom  02.pikchr  03.geom  03.pikchr  04.geom  04.pikchr  05.geom  05.pikchr  06.geom  06.pikchr  07.geom  07.pikchr  08.geom  08.pikchr  09.geom  09.pikchr  10.geom  10.pikchr  11.geom  11.pikchr  12.geom  12.pikchr  13.geom  13.pikchr  14.geom  14.pikchr  15.pikchr  16.geom  16.pikchr  17.geom  17.pikchr  18.geom  18.pikchr  19.geom  19.pikchr  20.geom  20.pikchr  21.geom  (+13 more)
tests/corpus_full/: c01.pikchr  c02.pikchr  c03.pikchr  c04.pikchr  c05.pikchr  f01.pikchr  f02.pikchr  f03.pikchr  f04.pikchr  f05.pikchr  f06.pikchr  f07.pikchr  f08.pikchr  f09.pikchr  f10.pikchr  f11.pikchr  f12.pikchr  f13.pikchr  f14.pikchr  f15.pikchr  f16.pikchr  m01.pikchr  m02.pikchr  m03.pikchr  m04.pikchr  m05.pikchr
